# cmake-build-sys-utilities

./: .gitignore  .gitmodules  README.md
scripts/: build_sys_opts.cmake  c_compile_and_run.cmake  check_endianness.cmake  common.cmake  debug.cmake  dir_opts.cmake  errcode_handling.cmake  logging.cmake  os_host_opts.cmake  run_cmake_script.cmake  siphash.cmake  stack.cmake  text_processing.cmake
tests/: CMakeLists.txt  common.cmake  run_tests.cmake  test_c_compile_and_run.cmake  test_check_endianness.cmake  test_gen_launch_json_args.cmake  test_get_dirs_with_cmake_lists.cmake  test_get_targets_from_project_tree.cmake  test_is_current_encoding_8_bit.cmake  test_logging.cmake  test_logging_env_variable.cmake  test_look_for_dependency_program.cmake  test_run_cmake_script.cmake
tests/scripts/: test-logging-env-var.cmake
tests/test_generate_args_for_launch_json_gen_script/: CMakeLists.txt
tests/test_generate_args_for_launch_json_gen_script/custom_targets/: CMakeLists.txt
tests/test_get_dirs_with_cmake_lists_timeout/: CMakeLists.txt
tests/test_get_dirs_with_cmake_lists_timeout/custom_targets/: CMakeLists.txt
tests/test_helpers/scripts/: test-script.cmake
tests/test_helpers/test_generate_args_for_launch_json_gen_script/: CMakeLists.txt
tests/test_helpers/test_generate_args_for_launch_json_gen_script/custom_targets/goodbye/: goodbye.cpp
tests/test_helpers/test_get_dirs_with_cmake_lists_timeout/: CMakeLists.txt
tests/test_helpers/test_get_dirs_with_cmake_lists_timeout/custom_targets/goodbye/: CMakeLists.txt
