cmake_minimum_required(VERSION 3.31)
project(test_generate_args_for_launch_json_gen_script)
include("${CMAKE_CURRENT_LIST_DIR}/../../../scripts/build_sys_opts.cmake")
add_subdirectory("custom_targets")
add_subdirectory("tests")

get_targets_list_under_dir("${CMAKE_CURRENT_LIST_DIR}")
if(NOT "${TARGET_LIST}" STREQUAL "hello_world;goodbye")
    message(FATAL_ERROR "Test failed. Target list is not what was expected.")
endif()